# FreeType

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/2.10.4/src/psaux/: psintrp.c  t1decode.c
Source/2.10.4/src/sfnt/: sfdriver.c
Source/2.10.4/src/smooth/: ftgrays.c
Source/2.10.4/src/truetype/: ttgload.c
Source/2.10.4/src/type1/: t1driver.c  t1load.c
Source/2.10.4/src/type42/: t42parse.c
Source/include/freetype/: freetype.h  fterrors.h  ftgasp.h  ftimage.h  ftincrem.h  ftlzw.h  ftoutln.h  ftrender.h  ftstroke.h  t1tables.h  ttnameid.h  ttunpat.h
Source/include/freetype/config/: ftheader.h
Source/include/freetype/internal/: autohint.h  ftgloadr.h  ftmemory.h  ftobjs.h  ftrfork.h  ftserv.h  ftvalid.h  psaux.h  sfnt.h  t1types.h
Source/include/freetype/internal/services/: svbdf.h  svotval.h  svpfr.h  svttcmap.h
Source/pre2.10.4/include/freetype/: ftadvanc.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftcache.h  ftcid.h  ftglyph.h  ftgxval.h  ftgzip.h  ftlcdfil.h  ftlist.h  ftmac.h  ftmm.h  ftmodapi.h  ftmoderr.h  ftotval.h  ftpfr.h  ftsizes.h  ftsnames.h  ftsynth.h  ftsystem.h  fttrigon.h  fttypes.h  ftwinfnt.h  ftxf86.h  tttables.h  tttags.h
Source/pre2.10.4/include/freetype/config/: ftconfig.h  ftoption.h
Source/pre2.10.4/include/freetype/internal/: ftcalc.h  ftdebug.h  ftdriver.h  ftstream.h  fttrace.h  tttypes.h
Source/pre2.10.4/include/freetype/internal/services/: svcid.h  svgxval.h  svmm.h  svpscmap.h  svsfnt.h  svttglyf.h  svwinfnt.h
Source/pre2.10.4/src/autofit/: afglobal.h  aflatin.h  aftypes.h  afwarp.h
Source/pre2.10.4/src/base/: ftbase.h  ftbbox.c  ftsystem.c
Source/pre2.10.4/src/bdf/: bdf.h  bdfdrivr.h
Source/pre2.10.4/src/cache/: ftcglyph.h  ftcimage.h  ftcmanag.h  ftcmru.h
Source/pre2.10.4/src/cff/: cffload.h  cffobjs.h
Source/pre2.10.4/src/cid/: cidobjs.h
Source/pre2.10.4/src/gxvalid/: gxvcommn.h
Source/pre2.10.4/src/gzip/: infcodes.h  infutil.h  zlib.h
Source/pre2.10.4/src/otvalid/: otvcommn.h
Source/pre2.10.4/src/pcf/: pcf.h  pcfread.h  pcfutil.h
Source/pre2.10.4/src/pfr/: pfrload.h  pfrobjs.h
Source/pre2.10.4/src/psaux/: afmparse.h  psobjs.h  t1decode.h
Source/pre2.10.4/src/pshinter/: pshglob.h
Source/pre2.10.4/src/psnames/: pstables.h
Source/pre2.10.4/src/raster/: ftmisc.h  ftrend1.h  raster.c
Source/pre2.10.4/src/sfnt/: sfobjs.h  ttbdf.h  ttcmap.h  ttkern.h  ttload.h  ttmtx.h
Source/pre2.10.4/src/smooth/: ftsmooth.h
Source/pre2.10.4/src/truetype/: ttdriver.h  ttgxvar.h  ttpload.h
Source/pre2.10.4/src/type1/: t1gload.h  t1load.h  t1objs.h
Source/pre2.10.4/src/type42/: t42objs.h
Source/src/autofit/: afcjk.h  afhints.h
Source/src/base/: ftglyph.c
Source/src/cache/: ftccache.h  ftccback.h  ftcsbits.h
Source/src/cff/: cffcmap.h  cffgload.h  cffparse.h  cfftoken.h  cfftypes.h
Source/src/cid/: cidgload.h  cidload.h  cidparse.h  cidtoken.h
Source/src/gxvalid/: gxvmort.h
Source/src/gzip/: infblock.h  inftrees.h  zconf.h  zutil.h
Source/src/lzw/: ftzopen.h
Source/src/otvalid/: otvalid.h
Source/src/pfr/: pfrtypes.h
Source/src/psaux/: psconv.h
Source/src/pshinter/: pshalgo.h  pshrec.h
Source/src/raster/: ftraster.h
Source/src/sfnt/: sfdriver.h  ttpost.h  ttsbit.h
Source/src/smooth/: ftgrays.h  smooth.c
Source/src/truetype/: ttgload.h  ttinterp.h  ttobjs.h
Source/src/type1/: t1afm.h  t1parse.h  t1tokens.h
Source/src/type42/: t42parse.h
Source/src/winfonts/: winfnt.h
